# Esp32-S3_Controller

./: CMakeLists.txt  Dockerfile  README.md  compose.yaml  partitions.csv  sdkconfig  sdkconfig.old
.devcontainer/: devcontainer.json
main/: CMakeLists.txt  index.html  io_config.h  main.c
spiffs_image/: index.html
